<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SimpleStepApp</string>

    <string name="reg_Name">Enter Name</string>
    <string name="reg_Email">Enter Email</string>
    <string name="reg_Mobile">Enter Password</string>
    <string name="reg_Age">Enter DOB</string>
    <string name="slctTimeslot">Select Time Slot</string>
    <string name="signup_Account" tools:ignore="ExtraTranslation">Don\'t have an Account ? <b><u>Sign Up</u></b>  </string>


    <!--IntroDuction page Starts-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!--IntroDuction page Ends-->
    <string name="txtHdngFreStyle">Free Style</string>
    <string name="txtHdng">Your Morning Routine </string>
    <string name="txtHdng_Q1">Wakeup Time </string>
    <string name="txtHdng_Q2">Brushing</string>
    <string name="txtHdng_Q3">Colon cleansing</string>
    <string name="txtHdng_Q4">Water Intake in one go</string>
    <string name="txtHdng_Q5">Physical Fitness (Workout/Yoga) will keep you healthy</string>
    <string name="txtHdng_Q6">Mental Fitness (Meditation)</string>
    <string name="txtHdng_Q7">Sun Bath(Free D vitamin intake)</string>

    <string name="txt_Quatn1">Your precious 12 slots of 15 minutes </string>
    <string name="txt_Quatn2">Proper brushing will prevent you from Bad Breath and &amp; tooth decay</string>
    <string name="txt_Quatn3">Will hydrate your body </string>
    <string name="txt_Quatn4">will detox your body</string>
    <string name="txt_Quatn5">Energise your body for the day</string>
    <string name="txt_Quatn6">Keeps you calm &amp; focused for the day</string>
    <string name="txt_Quatn7">Best way to get Vitamin D </string>
    <string name="rBtnTxtOption1">This is my routine, I think I am doing right.</string>
    <string name="rBtnTxtOption2">This is my routine, not sure about advantages/ disadvantages. </string>
    <string name="rBtnTxtOption3">I wish to improve but not able to manage.</string>

    <string name="brush_Q1">How many times do you brush your tooth</string>
    <string name="filetype">Select a Type</string>
    <string name="greterthan_30"> &gt; 30 mins </string>
    <string name="lesthan_5">&lt; 5 mins</string>
    <string-array name="filetypes">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <!-- Profile Page Starts-->
    <string name="txt_Age">Age</string>
    <string name="txt_Hgt">Height</string>
    <string name="txt_Wgt">Weight</string>
    <!-- Profile Page Ends-->

    <string name="player_error">Error initializing YouTube player: %s</string>
</resources>
