<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txt_Next"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/hdr"
                    style="@style/style_Hdr_Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/txtHdng_Q2"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_Hdr_Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/slctTimeslot"
                    android:visibility="gone"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardBackgroundColor="#f76f34"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.simplestepapp.utils.MyGridView
                            android:id="@+id/grid_view"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:columnWidth="10dp"
                            android:gravity="center"
                            android:horizontalSpacing="2dp"
                            android:numColumns="4"
                            android:padding="3dp"
                            android:stretchMode="columnWidth"
                            android:verticalSpacing="2dp">

                        </com.simplestepapp.utils.MyGridView>


                        <android.support.v7.widget.AppCompatTextView
                            style="@style/style_Hdr_Txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#bfa053"
                            android:gravity="center"
                            android:padding="20dp"
                            android:text="@string/txt_Quatn2" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_RgGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_Hdr_Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brush_Q1" />

                <RadioGroup
                    android:id="@+id/rG_brush_Masage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rBtn_BruTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2" />

                    <RadioButton
                        android:id="@+id/rBtn_BruOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1" />

                    <RadioButton
                        android:id="@+id/rBtn_BruThre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0" />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_list_Why"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_Hdr_Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Why:" />

                <RadioGroup
                    android:id="@+id/rGrp_Options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rBtn_op1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rBtnTxtOption1" />

                    <RadioButton
                        android:id="@+id/rBtn_op2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rBtnTxtOption2" />

                    <RadioButton
                        android:id="@+id/rBtn_op3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rBtnTxtOption3" />


                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_Next"
        style="@style/style_Hdr_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:text="Next" />

</RelativeLayout>