<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simplestepapp.activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:ignore="UselessParent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/img_Logo"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="vertical">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edtTxt_Name"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/reg_Name"
                    android:visibility="gone"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edtTxt_EmailId"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/reg_Email"
                    android:inputType="textEmailAddress" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTxt_Pwd"
                    style="@style/style_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/reg_Mobile"
                    android:inputType="textPassword" />


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_bg"
                    android:text="Sign In"
                    android:textColor="#FFFFFF" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="Forgot your Password ?"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:text="Sign In with Google"
                    android:background="@drawable/btn_sign_email_bg"
                    android:textColor="#FFFFFF"
                    />


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/signup_Account"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />


            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</FrameLayout>
