<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#2e72fa"
            android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/hdr"
                style="@style/style_Hdr_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Wake Up"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                style="@style/style_Hdr_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slctTimeslot" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#f1ae8b"
                app:cardCornerRadius="5dp"
                android:elevation="5dp">

                <GridView
                    android:id="@+id/grid_view"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:columnWidth="90dp"
                    android:gravity="center"
                    android:horizontalSpacing="10dp"
                    android:numColumns="4"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp"
                    android:padding="5dp">

                </GridView>
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyt_list_Why"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <android.support.v7.widget.AppCompatTextView
                style="@style/style_Hdr_Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Why:" />

            <RadioGroup
                android:id="@+id/rGrp_Options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rBtn_op1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rBtnTxtOption1" />

                <RadioButton
                    android:id="@+id/rBtn_op2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rBtnTxtOption2" />

                <RadioButton
                    android:id="@+id/rBtn_op3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rBtnTxtOption3" />


            </RadioGroup>

        </LinearLayout>



    </LinearLayout>

    </ScrollView>


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_WkUP_Next"
        style="@style/style_Hdr_Txt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="Next" />



</RelativeLayout>