<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#2e72fa"
                android:gravity="center">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/hdr"
                    style="@style/style_Hdr_Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Water InTake"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_Hdr_Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/slctTimeslot" />

                <com.simplestepapp.utils.HorizontalListView
                    android:id="@+id/hlvCustomList"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp">

                </com.simplestepapp.utils.HorizontalListView>
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioGroup
                    android:id="@+id/rG_WaterINTake"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <RadioButton
                        android:id="@+id/rBtn_WITOneL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1 Liter"/>

                    <RadioButton
                        android:id="@+id/rBtn_WIThalfL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0.5 Liter"/>
                    <RadioButton
                        android:id="@+id/rBtn_WITG"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1 Glass"/>
                    <RadioButton
                        android:id="@+id/rBtn_WITNone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="None"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_list_Why"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="invisible">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_Hdr_Txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Why:" />

                <RadioGroup
                    android:id="@+id/rGrp_Options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rBtn_op1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rBtnTxtOption1" />

                    <RadioButton
                        android:id="@+id/rBtn_op2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rBtnTxtOption2" />

                    <RadioButton
                        android:id="@+id/rBtn_op3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rBtnTxtOption3" />


                </RadioGroup>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txt_Back"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="Back" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txt_Next"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="Next" />
            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>